import outdent from 'outdent';
import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		'a { color: red; margin: 1px; background: url("#ABC") no-repeat; }',
		String.raw`a { \63 olor: \72 gb(0 0 0); }`,
		'linearGradient, svg|foreignObject, .Class#ID { color: red; }',
		'[DATA-Foo="Value" I], :lang(en-US), :nth-child(2n of .Item) { color: red; }',
		':--Heading { color: red; }',
		':--Heading(:HOVER) { color: red; }',
		'@--Theme {}',
		'@--Theme CALC(1PX) #ABC {}',
		'@--Theme { Value: CALC(1PX) #ABC; }',
		'@--Theme { .Foo:HOVER { COLOR: RED; } }',
		'@media (--Wide) {}',
		'@container (--Theme: RED) {}',
		'@container style(--Theme: RED) {}',
		'@supports at-rule(@--Theme) {}',
		'a { --ThemeColor: CALC(1PX) #ABC; color: --ThemeFunction(RED 1PX #ABC); }',
		'a { animation-name: FadeIn; font-family: Times New Roman; grid-area: MainContent; counter-reset: Section; }',
		'a { --Direction: ALTERNATE; animation: var(--Direction) NORMAL; }',
		'a { animation: env(--Direction) NORMAL; animation: attr(data-direction) NORMAL; animation: --direction() NORMAL; }',
		'a { font: var(--Size) CAPTION; }',
		'a { content: var(--Fallback) counter(NORMAL); }',
		'a { background: var(--Image), CENTER / COVER NO-REPEAT; background: --image(), CENTER / COVER NO-REPEAT; }',
		'a { content: counter(var(--Name), NORMAL); font-variant-alternates: styleset(var(--Name), NORMAL); }',
		'a { content: "UPPERCASE"; background-image: url("IMAGE.PNG#ABC"); }',
		'a { color: attr(RED); color: env(RED); display: env(BLOCK); }',
		String.raw`a { background-image: element(#\41 BC); background-image: var(--Fallback), element(#DEF); background-image: -moz-element(#ABC); }`,
		'a { color: red !IMPORTANT; } @charset "UTF-8";',
		'@CHARSET "iso-8859-1";',
		String.raw`@\63 HARSET "iso-8859-1";`,
		'@property --ThemeColor { syntax: "<COLOR> | MyToken"; inherits: false; initial-value: CanvasText; }',
		'@property --ThemeColor { syntax: "<color>"; inherits: false; initial-value: #ABCDEF; }',
		'@font-face { font-weight: BOLDER; color: RED; }',
		outdent`
			@font-feature-values Font {
				@annotation { Note: 1; }
				@character-variant { Variant: 1 2; }
				@ornaments { Flourish: 1; }
				@styleset { NiceStyle: 1; }
				@stylistic { Alternate: 1; }
				@swash { FancySwash: 1; }
			}

			a { font-variant-alternates: annotation(Note) character-variant(Variant) ornaments(Flourish) styleset(NiceStyle) stylistic(Alternate) swash(FancySwash); }
		`,
		String.raw`a { color: #AB; outline-color: #ABCDE; color: #\61 bc; --Color: #ABCDEF; }`,
		'.İtem { color: İNITIAL; --Éxample: VALUE; }',
		String.raw`a { transform: translate\59 (0); }`,
		'a { transform: translateX(1px) translateY(1px) translateZ(1px) scaleX(1) scaleY(1) scaleZ(1) rotateX(1deg) rotateY(1deg) rotateZ(1deg) skewX(1deg) skewY(1deg); }',
		'a { font-family: -apple-system, BlinkMacSystemFont, sans-serif; font: 1em -apple-system, BlinkMacSystemFont, sans-serif; }',
		':export { primaryColor: red; SecondaryColor: blue; }',
		'a { Unknown-Property: red; }',
		// CSS Modules interop blocks are read by JavaScript as exact strings.
		':export { Width: 10px; Color: Red; breakpoint: 768PX; accent: #ABC; shadow: RGB(0 0 0); }',
		':import("./theme.css") { Color: Red; breakpoint: 768PX; }',
		':export { image: URL(a.png); }',
		String.raw`:\65xport { Color: Red; }`,
		// Function names that the CSS grammar does not know can be case-sensitive, like PostCSS functions.
		'a { width: myFunc(1px); color: themeColor(x); }',
		'@media (width > myFunc(1px)) {}',
		// Unknown property names and their values can be author-defined, so they are not changed.
		'a { My-Custom-Flag: ENABLED; Unknown-Property: VALUE; }',
		// Percent has no case.
		'a { width: 50%; flex-basis: 25.5%; }',
		// Custom property names and values are never changed.
		'a { --Fallback-Color: HotPink; --My-Grid: Main-Sidebar; }',
		'a { counter-increment: MyCounter 2; counter-reset: MySection; }',
		'a { animation-name: MyFadeIn, Spin; }',
		'a { font-family: "Fira Sans", Helvetica Neue, Arial; }',
		'a { grid-template-areas: "Header Header" "Side Main"; grid-row: Header-Start / Header-End; }',
		// Payloads of functions that preserve their payload keep their casing.
		'a { width: env(SAFE-AREA-INSET-TOP, 0px); }',
		'a { width: attr(DATA-Width px); }',
		'a { background: paint(MyPainter); }',
		'a { background: url(Image.PNG#Fragment); }',
		// A substitution can determine whether an identifier is a keyword or a case-sensitive name.
		'a { border-color: var(--Color) RED; }',
		'a { color: var(--Color, RED); }',
		'a { transition: var(--Duration) EASE-IN; }',
		// `@property` initial values are user data, so they are not changed.
		'@property --Theme { syntax: "*"; inherits: false; initial-value: FOO(1PX) #ABC; }',
		// Keyframe selectors are not value keywords, so their casing is kept.
		'@keyframes FadeIn { FROM { opacity: 0; } 50% { opacity: 1; } TO { opacity: 0; } }',
		'a { display: block !IMPORTANT; }',
		'a { content: "UPPER" "Lower"; }',
		// An unknown declaration property means its value cannot be matched against a grammar.
		'@supports (My-Prop: VALUE) {}',
		// Unknown function names and their arguments can be case-sensitive.
		'a { background-image: linearGradient(0deg, RED, BLUE); }',
		'linearGradient.Theme#Main[data-mode="DARK"] { color: red; }',
	],
	invalid: [
		outdent`
			@MEDIA (MIN-WIDTH: 10PX) and (10EM < HEIGHT < 20REM) {
				.thing:HOVER::BEFORE {
					COLOR: RGB(0 0 0 / 50%);
					border: 1PX SOLID #AbCd;
					background: URL("#ABC") NO-REPEAT;
				}
			}
		`,
		'@media (/* before */ WIDTH > 1PX), (1EM < HEIGHT /* after */) {}',
		'@FONT-FACE { FONT-STYLE: OBLIQUE; src: LOCAL("Example"), URL(font.WOFF2) FORMAT("WOFF2"); }',
		'@font-feature-values Font { FONT-DISPLAY: SWAP; }',
		'@property --ThemeColor { SYNTAX: "<COLOR>"; INHERITS: FALSE; INITIAL-VALUE: #ABCDEF; }',
		String.raw`@\70 roperty --ThemeColor { inherits: FALSE; syntax: "<color>"; initial-value: red; }`,
		'@supports (COLOR: RED) {}',
		'a { @media (width > 1px) { color: RED; display: BLOCK; } }',
		'a { border: 1PX SOLID var(--Color); background: var(--Image) NO-REPEAT FIXED; animation: FadeIn 1S LINEAR; }',
		'a { transition-timing-function: var(--Fallback) STEPS(2, JUMP-START); transition-timing-function: STEPS(2, JUMP-START); transform: ROTATE(45DEG); }',
		'a { color: ATTR(RED); color: ENV(RED); }',
		String.raw`a { \43 OLOR: RED; color: \52 GB(0 0 0); }`,
		String.raw`a { color: R\45 D; border: var(--x) S\4f LID; border: S\4f LID; transition-timing-function: ST\45 PS(2, J\55 MP-START); }`,
		String.raw`a { background: \55 RL(#ABC); }`,
		'a { /* before */ COLOR /* after */: /* value */ RED /* end */; }',
		'a { font: CAPTION; }',
		'a { color: CanvasText; border-color: ActiveText; background-color: ReBeccAPurple; }',
		'a { color: #ABC; color: #1ABC; color: #12AB34; color: #1234ABCD; }',
		String.raw`a { color: #\41 BC; }`,
		'@-WEBKIT-KEYFRAMES Fade { from { -WEBKIT-TRANSFORM: ROTATE(1DEG); } }',
		'a { transform: TRANSLATEY(0) translatey(0) TranslateY(0) translateXY(0); }',
		'a { transform: ROTATEX(1deg) rotatez(1deg) SKEWX(1deg) Scalex(1) translate3D(0, 0, 0); }',
		String.raw`a { transform: translate\79 (0); }`,
		'a { font-family: BlinkMacSystemFont, SANS-SERIF; font-family: INHERIT; font: 1em BlinkMacSystemFont, SANS-SERIF; }',
		'a { -WEBKIT-TRANSITION: none; COLOR: red; }',
		'@page { MARGIN: 0; } @font-face { FONT-DISPLAY: swap; }',
		'.a:export { Color: Red; } :export .a { Color: Red; } :export { .a { Color: Red; } }',
		'a { color: RGBA(0, 0, 0, 0.5); width: CALC(1PX + 2px); height: myFunc(1PX); }',
		// A known property is lowercased, an unknown one is left alone.
		'a { COLOR: RED; My-Prop: VALUE; }',
		// Units: `0PX`, `40REM`, `10EM`, `90DEG`, `2S`.
		'a { margin: 0PX auto; width: 40REM; font-size: 10EM; transform: rotate(90DEG); transition: color 2S; }',
		'a { grid-template-columns: 1FR 2FR; }',
		'a { filter: BLUR(1PX); }',
		'a { background: LINEAR-GRADIENT(RED, BLUE); }',
		// The 12 camelCase transform functions get their spec casing.
		'a { transform: ROTATEY(1DEG) ROTATEZ(1deg) SKEWY(1DEG) SCALEZ(1) TRANSLATEZ(1PX); }',
		// Known functions, units, and colors are checked even inside an unknown function.
		'a { width: CALC(myFunc(1PX)); }',
		'a:NOT(:HOVER) {}',
		'a:FIRST-CHILD {} a:-WEBKIT-ANY-LINK {}',
		'a::PART(MyPart) {}',
		// A media feature value has no declaration, so it is not treated as a value keyword.
		'@media (ORIENTATION: LANDSCAPE) and (MIN-RESOLUTION: 2DPPX) {}',
		'a { border-color: COLOR-MIX(IN SRGB, #ABCD, RED); }',
		String.raw`a { color: \52 ED; }`,
		String.raw`a { width: 1P\58; }`,
		// Property, function, and unit are checked, but the value identifier next to `var()` is not.
		'a { COLOR: CALC(1PX) var(--X); }',
		'a { display: BLOCK !IMPORTANT; }',
		// Multiple occurrences of the same unit in one declaration.
		'a { padding: 1PX 2PX 3PX 4PX; }',
		'a { font: ITALIC BOLD 1EM Arial, SANS-SERIF; }',
		'@supports NOT (DISPLAY: GRID) {}',
		'@layer Theme { a { COLOR: RED; } }',
		'a { --x: RED; COLOR: BLUE; }',
		'@font-face { FONT-FAMILY: "Font", SERIF; }',
		'@counter-style Thumbs { SYSTEM: CYCLIC; }',
		'a { background: IMAGE-SET(URL(a.png) 1X); }',
		'a { transition: ALL 1S EASE-IN-OUT; }',
		'a { color: RGB(1 2 3); background: HSL(0DEG 0% 0%); }',
	],
});

test({
	valid: [],
	invalid: [
		{
			code: '@media (\u00A0WIDTH: 1PX) {}',
			output: '@media (\u00A0width: 1px) {}',
			errors: 2,
		},
		{
			code: String.raw`@media (\57 IDTH: 1P\58) { a:\48 OVER::\42 EFORE { color: CURRENTCOLOR; } }`,
			output: '@media (width: 1px) { a:hover::before { color: currentcolor; } }',
			errors: 5,
		},
		{
			code: String.raw`@media (1PX < \57 IDTH < 2EM) {}`,
			output: '@media (1px < width < 2em) {}',
			errors: 3,
		},
		{
			code: '@container MyLayout (WIDTH > 1PX) {} @container (1PX < HEIGHT < 2EM) {}',
			output: '@container MyLayout (width > 1px) {} @container (1px < height < 2em) {}',
			errors: 5,
		},
		{
			code: '@import URL(FOO.CSS) LAYER(Theme) SUPPORTS(DISPLAY: GRID) screen and (MIN-WIDTH: 1PX);',
			output: '@import url(FOO.CSS) layer(Theme) supports(display: grid) screen and (min-width: 1px);',
			errors: 7,
		},
		{
			code: String.raw`@container (/* before */ \57 IDTH: 1PX) {}`,
			output: '@container (/* before */ width: 1px) {}',
			errors: 2,
		},
		{
			code: 'a { background-image: PAINT(MyPainter, #ABC, 1PX, CALC(1PX)); }',
			output: 'a { background-image: paint(MyPainter, #ABC, 1PX, CALC(1PX)); }',
			errors: 1,
		},
		{
			code: 'a { background: PAINT(MyPainter) NO-REPEAT; }',
			output: 'a { background: paint(MyPainter) no-repeat; }',
			errors: 2,
		},
		{
			code: 'a { animation: 1S EASE-IN EASE-OUT; }',
			output: 'a { animation: 1s ease-in EASE-OUT; }',
			errors: 2,
		},
		{
			code: '@property --Theme { SYNTAX: "*"; INHERITS: FALSE; INITIAL-VALUE: FOO(1PX) #ABC; }',
			output: '@property --Theme { syntax: "*"; inherits: false; initial-value: FOO(1PX) #ABC; }',
			errors: 4,
		},
		{
			code: 'a { font: var(--Style) BOLD 1PX Arial; background: var(--Color) CENTER / COVER NO-REPEAT; }',
			output: 'a { font: var(--Style) BOLD 1px Arial; background: var(--Color) CENTER / COVER NO-REPEAT; }',
			errors: 1,
		},
		{
			code: outdent`
				@supports SELECTOR(a:HOVER) {}
				@supports FONT-TECH(variations) {}
				@supports FONT-FORMAT(woff2) {}
				@supports AT-RULE(@MEDIA) {}
				@supports NAMED-FEATURE(foo) {}
				@supports ENV(foo) {}
				@container STYLE(COLOR: RED) {}
			`,
			output: outdent`
				@supports selector(a:hover) {}
				@supports font-tech(variations) {}
				@supports font-format(woff2) {}
				@supports at-rule(@media) {}
				@supports named-feature(foo) {}
				@supports env(foo) {}
				@container style(color: red) {}
			`,
			errors: 11,
		},
	],
});
